--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/external-ids/external-ids.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/external-ids/external-ids.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="parentForm">
   <div formArrayName="ids">
-    <div *ngIf="!ids.length">
+    <div *ngIf="!ids?.length">
       <br />
       <button type="button" mat-raised-button color="primary" (click)="addId()">
         add ID
