Completing person name editor

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
@@ -1,4 +1,4 @@
-<form [formGroup="parentForm" ]>
+<form [formGroup]="parentForm">
   <!-- language (bound) -->
   <div *ngIf="!langThesaurus">
     <mat-form-field>
