--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,15 +11,10 @@
     <img src="./assets/img/cadmus-300.png" alt="Cadmus" />
   </div>
   <div gdArea="text">
-    <p>
-      Welcome to the Cadmus playground. This web UI supports the development of
-      the Cadmus editing system. It will grow together with the system itself,
-      and serve as a prototype.
-    </p>
-    <p>
-      You can find the full source code at
-      <a href="https://github.com/vedph" target="_blank">github.com/vedph</a>.
-    </p>
+    <p>Welcome to the Itinera project editing dashboard.</p>
     <p *ngIf="!logged">Please <a routerLink="/login">login</a> to start.</p>
+  </div>
+  <div>
+    <lib-person-name></lib-person-name>
   </div>
 </div>
