Person name model property

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,6 +15,11 @@
     <p *ngIf="!logged">Please <a routerLink="/login">login</a> to start.</p>
   </div>
   <div>
-    <lib-person-name [typeThesaurus]="typeThesaurus"></lib-person-name>
+    <lib-person-name
+      [typeThesaurus]="typeThesaurus"
+      [langThesaurus]="langThesaurus"
+      [model$]="person$"
+      (editorSave)="onEditorSave($event)"
+    ></lib-person-name>
   </div>
 </div>
