--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
@@ -123,7 +123,7 @@
         <!-- child controls -->
         <!-- type (bound) -->
         <ng-container *ngIf="typeThesaurus">
-          <mat-form-field>
+          <mat-form-field style="width: 8em">
             <mat-select formControlName="type" placeholder="type">
               <mat-option
                 *ngFor="let e of typeThesaurus.entries"
@@ -143,7 +143,7 @@
 
         <!-- type (free) -->
         <ng-container *ngIf="!typeThesaurus">
-          <mat-form-field>
+          <mat-form-field style="width: 8em">
             <input matInput formControlName="type" placeholder="type" />
             <mat-error
               *ngIf="
