Add name button

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-part/person-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-part/person-part.component.html
@@ -55,7 +55,16 @@
               </tbody>
             </table>
           </div>
-          TODO: add name button
+          <div>
+            <button
+              type="button"
+              mat-raised-button
+              color="primary"
+              (click)="addName()"
+            >
+              add name
+            </button>
+          </div>
 
           <!-- external IDs -->
           <mat-expansion-panel>
