Better looking buttons

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/external-ids/external-ids.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/external-ids/external-ids.component.html
@@ -2,7 +2,7 @@
   <div formArrayName="ids">
     <div *ngIf="!ids?.length">
       <br />
-      <button type="button" mat-raised-button color="primary" (click)="addId()">
+      <button type="button" mat-stroked-button color="primary" (click)="addId()">
         add ID
       </button>
     </div>
