--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
@@ -64,7 +64,7 @@
       <br />
       <button
         type="button"
-        mat-raised-button
+        mat-stroked-button
         color="primary"
         (click)="addPart()"
       >
