--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-part/person-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/person-part/person-part.component.html
@@ -73,11 +73,11 @@
             </table>
           </div>
           <div>
-            <button type="button" mat-raised-button color="primary" (click)="addName()">
-              add name
+            <button type="button" mat-icon-button color="primary" (click)="addName()" matTooltip="Add a new name">
+              <mat-icon>add_circle</mat-icon>
             </button>
           </div>
-          <mat-expansion-panel>
+          <mat-expansion-panel [expanded]="nameIndex > -1">
             <mat-expansion-panel-header>
               <mat-panel-title>name</mat-panel-title>
             </mat-expansion-panel-header>
