Focus on new name's part

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/person-name/person-name.component.html
@@ -162,7 +162,7 @@
 
         <!-- value -->
         <mat-form-field>
-          <input
+          <input #partValue
             matInput
             maxlength="50"
             formControlName="value"
