Refactored person name and external IDs

--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/external-ids/external-ids.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/external-ids/external-ids.component.html
@@ -58,7 +58,7 @@
         <!-- child controls -->
         <!-- ID -->
         <mat-form-field>
-          <input
+          <input #id
             matInput
             maxlength="500"
             formControlName="id"
